--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "dev" ]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   code-quality:
     name: Code Quality Check
@@ -33,7 +38,7 @@ jobs:
           echo "✅ Code quality check passed!"
 
       - name: Comment on PR (if applicable)
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && success()
         uses: actions/github-script@v6
         with:
           script: |
