--- a/.gitignore
+++ b/.gitignore
@@ -48,18 +48,20 @@ logs/
 *.pth
 *.bin
 
-# Large model files (to be managed separately)
-app/model/*.safetensors
-app/model/model.safetensors
-app/model/tokenizer.json
+# Large model files (to be managed separately - but allow for assignment submission)
+# app/model/*.safetensors  # Commented out for assignment submission
+# app/model/model.safetensors  # Commented out for assignment submission
+# app/model/tokenizer.json  # Commented out for assignment submission
 *.ckpt
 
-# Allow small configuration files in model directory
+# Allow model files for assignment submission
 !app/model/config.json
 !app/model/tokenizer_config.json
 !app/model/special_tokens_map.json
 !app/model/vocab.txt
 !app/model/README.md
+!app/model/model.safetensors
+!app/model/tokenizer.json
 
 # Only allow very small test files
 !tests/**/*.pt
